--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <i class="fas fa-chevron-right fa-3x" @click="nextImage"></i>
             </div>
             <select class="droplist" name="" v-model="imagesIndex">
-                <option value="" :value="option-1" v-for="option in images.length">
+                <option value="" :value="option - 1" v-for="option in images.length">
                     {{option}}
                 </option>
             </select>
